<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="bottom"
              android:background="@color/grey_5"
              android:orientation="vertical"
              android:padding="@dimen/_10sdp">

    <ImageView
            android:id="@+id/ImgPoke"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
    />

    <androidx.cardview.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/cardview2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginBottom="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_3sdp"
            android:layout_marginStart="@dimen/_3sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_3sdp"
    >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingBottom="@dimen/_5sdp"
        >
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_10sdp"
            >
                <TextView
                        android:id="@+id/textNombre"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/grey_90"
                        android:textSize="@dimen/_13sdp"
                />

                <TextView
                        android:id="@+id/Nombre"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/details_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/grey_60"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:textSize="@dimen/_13sdp"
                />

            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_5sdp"
            >
                <TextView
                        android:id="@+id/textNumero"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/n_mero"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/grey_90"
                        android:textSize="@dimen/_13sdp"
                />

                <TextView
                        android:id="@+id/Numero"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/details_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/grey_60"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:textSize="@dimen/_13sdp"
                />

            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_5sdp"
            >
                <TextView
                        android:id="@+id/textTipo"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/tipo"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/grey_90"
                        android:textSize="@dimen/_13sdp"
                />

                <TextView
                        android:id="@+id/Tipo"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/details_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/grey_60"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:textSize="@dimen/_13sdp"
                />
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_5sdp"
            >
                <TextView
                        android:id="@+id/textRegion"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/regi_n"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/grey_90"
                        android:textSize="@dimen/_13sdp"
                />

                <TextView
                        android:id="@+id/Region"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/regi_n"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/grey_60"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:textSize="@dimen/_13sdp"
                />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_5sdp"
            >
                <TextView
                        android:id="@+id/textDescripcion"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/descripci_n"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/grey_90"
                        android:textSize="@dimen/_13sdp"
                />

                <TextView
                        android:id="@+id/Descripcion"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/regi_n"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/grey_60"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:textSize="@dimen/_13sdp"
                />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="end"
            android:orientation="horizontal"
    >

        <Button
                android:id="@+id/btnAgregar"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Agregar Pokémon"
                android:textAllCaps="false"
        />

        <Button
                android:id="@+id/bt_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cerrar"
                android:theme="@style/Button.Primary"
                android:textColor="@color/blanco"
                android:textAllCaps="false"
        />

    </LinearLayout>

</LinearLayout>