<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".View.Login"
        android:background="@color/blanco"
>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/linearLayout"
            app:layout_constraintBottom_toBottomOf="parent">


        <ImageView
                android:id="@+id/logoPoke"
                android:layout_width="@dimen/_270sdp"
                android:layout_height="@dimen/_110sdp"
                android:scaleType="centerInside"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
                android:id="@+id/logoUser"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:scaleType="centerInside"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
                android:id="@+id/texto"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                tools:ignore="MissingConstraints"
                android:layout_marginTop="@dimen/_40sdp"
         >

            <TextView
                    android:id="@+id/bienvenido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bienvenido"
                    android:textColor="@color/negro"
                    android:textSize="@dimen/_16sdp"
                   />

            <TextView
                    android:id="@+id/registrate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textlogin"
                    android:textColor="@color/Gris"
                    android:textSize="@dimen/_11sdp"
                    android:layout_marginTop="@dimen/_minus3sdp"
            />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/btnFirebase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/_20sdp"
                >

            <com.facebook.login.widget.LoginButton
                    android:id="@+id/btnFacebook"
                    android:layout_width="@dimen/_205sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingStart="@dimen/_12sdp"
                    android:paddingTop="@dimen/_11sdp"
                    android:paddingBottom="@dimen/_11sdp"
                    android:visibility="gone"
                    tools:ignore="RtlSymmetry" />

            <Button
                    android:id="@+id/btnFacebookCust"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_37sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/corner_shape_face"
                    android:drawableStart="@drawable/ic_facebook"
                    android:drawablePadding="@dimen/_10sdp"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/_10sdp"
                    android:text="@string/iniciar_sesi_n_con_facebook"
                    android:textAllCaps="false"
                    android:textColor="@color/blanco"
                    android:textSize="@dimen/_11sdp"
                    tools:ignore="RtlSymmetry" />

            <Button
                    android:id="@+id/btnGoogle"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_37sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@drawable/corner_shape_google"
                    android:drawableStart="@drawable/ic_google"
                    android:drawablePadding="@dimen/_10sdp"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/_10sdp"
                    android:text="@string/iniciar_sesi_n_con_google"
                    android:textAllCaps="false"
                    android:textColor="@color/blanco"
                    android:textSize="@dimen/_11sdp"
                    tools:ignore="RtlSymmetry" />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone"
    />
</androidx.constraintlayout.widget.ConstraintLayout>